# pdb-mcp

./: example.py  pyproject.toml
src/pdb_mcp/: server.py  session.py
